added about page with more info and beautiful picture

--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -13,28 +13,29 @@
 	</header>
     <section>
         <h2>About Me</h2>
-        <p>Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri. I spend most of my free time drawing, practicing guitar, or playing Dungeons and Dragons!</p>
+        <p>Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri.</p>
     </section>
-	
 	<section>
 		<h2>My Skills</h2>
 		<table border="1">
-		<tr>
-			<th>Skill</th>
-			<th>Experience</th>
-		</tr>
-		<tr>
-			<td>Music</td>
-			<td>I've spent over eight years learning the guitar. I'm also in a band!</td>
-		</tr>
-		<tr>
-			<td>Art</td>
-			<td>I've been drawing for more than a decade!</td>
-		</tr>
-		<tr>
-			<td>Programming</td>
-			<td>Learning JavaScript, HTML, and CSS!</td>
-		</tr>
+            <tr>
+                <th>Skill</th>
+                <th>Experience</th>
+            </tr>
+            <tr>
+                <td>Music</td>
+                <td>I've spent over eight years learning the guitar. I'm also in a band!</td>
+            </tr>
+            <tr>
+                <td>Art</td>
+                <td>I've been drawing for more than a decade!</td>
+            </tr>
+            <tr>
+                <td>Programming</td>
+                <td>Learning JavaScript, HTML, and CSS!</td>
+            </tr>
+        </table>
+    </section>    
 	<section>
 		<h2>Contact Form</h2>
 		<p>Contact me!</p>
@@ -49,5 +50,6 @@
 			<button type="submit">Submit</button>
 		</form>
 		<p>I'll get back to you as soon as possible!</p>
+    </section>
 </body>
 </html>
