--- a/portfolio-page-about.html
+++ b/portfolio-page-about.html
@@ -12,12 +12,12 @@
 		<h1>Daniel Hook</h1>
 		<p>Artist, musician, and programmer.</p>
 	</header>
-    <p>____________________________________</p>
+
     <section>
         <h2>About Me</h2>
-        <img src="gdimp.png" alt="graphic design is my passion frog" width=250 id="hp">
-        <p>Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri. I spend most of my free time drawing, playing video games, practicing guitar, or playing Dungeons and Dragons!</p>
+        <p class="whatever">Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri. I spend most of my free time drawing, playing video games, practicing guitar, or playing Dungeons and Dragons!</p>
     </section>
+
 	<section>
 		<h2>My Skills</h2>
 		<ul>
@@ -26,10 +26,11 @@
             <li>Programming: I'm currently learning JavaScript, HTML, and CSS! Soon, this page will look even more incredible.</li>
         </ul>
     </section>
-    <p>____________________________________</p>
+
     <section>
         <footer>
-            <p>Copyright Daniel Hook 2025 | <a href="https://github.com/MostLikelyNotHuman">find me on github</a></p>
+            <p>Copyright Daniel Hook 2025</p>   
+            <p><a href="https://github.com/MostLikelyNotHuman">find me on github</a></p>
         </footer>
     </section>
 </body>
