put the picture back

--- a/portfolio-page-about.html
+++ b/portfolio-page-about.html
@@ -15,21 +15,25 @@
 
     <section>
         <h2>About Me</h2>
-        <p class="whatever">Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri. I spend most of my free time drawing, playing video games, practicing guitar, or playing Dungeons and Dragons!</p>
+        <img src="placeholder.png" alt="danny phantom" class="profile">
+        <p class="about">Hello! My name's Danny. I'm an artist, musician, and computer programmer from St. Louis, Missouri. I spend most of my free time drawing, playing video games, practicing guitar, or playing Dungeons and Dragons!</p>
     </section>
 
 	<section>
-		<h2>My Skills</h2>
-		<ul>
+        <br class="skills">
+		<h2 class="skills">My Skills</h2>
+		<ul class="skills">
             <li>Music: I've been playing the guitar for over eight years. I'm also in a band!</li>
             <li>Art: I've been drawing for more than a decade! You can find some of my older stuff on my <a href="https://www.artstation.com/mostlikelynothuman">Artstation.</a></li>
             <li>Programming: I'm currently learning JavaScript, HTML, and CSS! Soon, this page will look even more incredible.</li>
         </ul>
     </section>
 
+    <hr>
+
     <section>
         <footer>
-            <p>Copyright Daniel Hook 2025</p>   
+            <p>&copy; Daniel Hook 2025</p>   
             <p><a href="https://github.com/MostLikelyNotHuman">find me on github</a></p>
         </footer>
     </section>
